parlasite/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-deployment
  labels:
    app: parlasite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite
  template:
    metadata:
      labels:
        app: parlasite
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: parlasite
          image: parlasite
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 100Mi
              cpu: 200m
            limits:
              memory: 100Mi
              cpu: 200m
