parlasite/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlasite-hrastnik
spec:
  selector:
    app: parlasite-hrastnik
  ports:
    - protocol: TCP
      port: 3066
      targetPort: 3066
